# maite

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Contributors.md  README.md  poetry.toml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: publish_docs.yml  pypi_publish.yml  test_pypi_publish.yml
demos/: AuglyAugmentations.ipynb  EvaluationMetrics.ipynb  ObjectDetection.ipynb  Peturbations_CatsAndDogs.ipynb  Protocols.ipynb
docs/: .buildinfo  Makefile  README.md  api_reference.html  assemble_docs_for_publish.py  changes.html  copy_docs_to_dir.py  explanation.html  genindex.html  how_tos.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  tutorials.html  upload_docs_to_pkg_registry.py
docs/.doctrees/: api_reference.doctree  codeautolink-cache.json  explanation.doctree  how_tos.doctree
docs/.doctrees/api/: generic.doctree  interop.doctree  tasks.doctree
docs/.doctrees/explanation/: protocol_overview.doctree  type_hints_for_API_design.doctree
docs/_modules/: index.html
docs/_sources/: api_reference.rst.txt  changes.rst.txt  explanation.rst.txt  index.rst.txt  tutorials.rst.txt
docs/api/: generic.html  object_detection.html  protocols.html
docs/explanation/: maite_vision.html  protocol_overview.html  type_hints_for_API_design.html
docs/how_to/: metrics.html  static_typing.html  wrap_image_classification_dataset.html  wrap_image_classification_model.html  wrap_object_detection_dataset.html  wrap_object_detection_model.html
docs/latest/: .buildinfo  api_reference.html  changes.html  explanation.html  genindex.html  how_tos.html  index.html  objects.inv  search.html  searchindex.js  tutorials.html
docs/source/: api_reference.rst  changes.rst  conf.py  explanation.rst  how_tos.rst  index.rst  tutorials.rst
docs/test/: test.html
docs/tutorials/: basic_evaluation.html  hf_image_classification.html  torchvision_object_detection.html
docs/v0.4.0/: api_reference.html  changes.html  explanation.html  genindex.html  how_tos.html  index.html  searchindex.js
docs/v0.5.0/: changes.html  how_tos.html  index.html  objects.inv  searchindex.js  tutorials.html
docs/v0.6.0/: changes.html  explanation.html  how_tos.html  index.html  searchindex.js  tutorials.html
docs/v0.6.1/: .buildinfo  api_reference.html  changes.html  explanation.html  genindex.html  how_tos.html  index.html  objects.inv  search.html  searchindex.js  tutorials.html
docs/v0.7.1/: explanation.html  genindex.html  how_tos.html  search.html
docs/v0.7.3/: .buildinfo  api_reference.html  changes.html  explanation.html  genindex.html  how_tos.html  index.html  objects.inv  search.html  tutorials.html
docs/v0.8.0/: .buildinfo  tutorials.html
docs/v0.8.1/: explanation.html  genindex.html  objects.inv  searchindex.js
docs/v0.8.2/: .buildinfo  api_reference.html  changes.html  explanation.html  genindex.html  how_tos.html  index.html  objects.inv  search.html  searchindex.js  tutorials.html
docs/v0.9.0/: api_reference.html  explanation.html  genindex.html  index.html  searchindex.js  tutorials.html
docs/v0.9.2/: how_tos.html  search.html  searchindex.js
docs/v0.9.4/: genindex.html  index.html
examples/: basic_evaluation.ipynb  image_classification_demo.ipynb  protocol_overview.ipynb  whitebox_augmentation.ipynb
examples/explanation/: protocol_overview.ipynb
examples/how_to/: wrap_image_classification_dataset.ipynb  wrap_image_classification_model.ipynb  wrap_object_detection_dataset.ipynb  wrap_object_detection_model.ipynb
examples/torchvision_object_detection/: torchvision_object_detection.ipynb
examples/tutorials/: .gitignore  hf_image_classification.ipynb  torchvision_object_detection.ipynb
jatic_tests/: README.md  pyproject.toml
project_tooling/: add_header.py
src/jatic_toolbox/: __init__.py  errors.py  protocols.py
src/maite/: __init__.py  errors.py  protocols.py  tasks.py  workflows.py
stress_tests/: commercial_object_detection.py  generic_protocols.py  image_classification_demo.ipynb  image_classification_protocols.py  obj_detection_protocols.py  whitebox_augmentation.py
tests/: __init__.py  conftest.py  test_aliases_and_guards.py  test_docstrings.py  test_min_install.py  test_protocols.py  test_repo.py  test_type_correctness.py  test_version.py
tests/common/: huggingface.py  torchvision.py  utils.py
tests/component_impls/: ic_simple_component_impls.py  od_simple_component_impls.py
tests/dummy_projects/: README.md
tests/dummy_projects/basic/: pyproject.toml
tests/dummy_projects/basic/src/jatic_dummy/basic/: needs_mygrad.py  stuff.py
tests/dummy_projects/basic/src/maite_dummy/basic/: needs_mygrad.py  stuff.py
tests/requires_torch/: test_torch_repro_seed.py
tests/test_interop/: test_api_huggingface.py  test_api_hydra_zen.py  test_api_torcheval.py  test_api_torchmetrics.py  test_api_torchvision.py  test_artifact_hub.py  test_augly.py  test_augmentation.py  test_datasets.py  test_evaluate.py  test_huggingface.py  test_huggingface_hydra_zen.py  test_huggingface_object_detection.py  test_huggingface_validation.py  test_models.py  test_provider.py  test_provider_registry.py  test_pyav_adapter_sampler.py  test_smqtk_hydra_zen.py  test_smqtk_object_detection.py  test_smqtk_validation.py  test_torch_augmentation.py  test_torch_evaluate.py  test_torch_validate_model_io.py  test_torchmetrics.py  test_torchmetrics_detection.py  test_utils.py  test_validate_implementations.py  test_validate_model_io.py  test_wrappers.py
tests/test_tasks/: conftest.py  test_generic_evaluate.py  test_ic_eval_from_pred.py  test_od_eval_from_pred.py  test_tasks.py
tests/test_testing/: test_docs_utils.py  test_entrypoint_validation.py  test_parsing.py  test_project.py  test_rst_parsing.py  test_type_checking.py
tests/test_utils/: test_validation.py
tests/test_workflows/: conftest.py  test_evaluate_static.py  test_generic_evaluate.py  test_ic_eval_from_pred.py  test_ic_evaluate.py  test_ic_workflows.py  test_od_eval_from_pred.py  test_od_evaluate.py  test_od_workflows.py  test_workflows.py
(+573 files in other folders)
